fix replace list.getFirst() with list.get(0) for backward compatibility